src/test/error/tuple3.lns
{
   let (val1) = (= 1,2);
}
